--- a/src/app/filtercontainer/filtercontainer.component.html
+++ b/src/app/filtercontainer/filtercontainer.component.html
@@ -2,10 +2,8 @@
   <div class="filter-input shadow">
     <div class="search-wrapper">
       <fa-icon [icon]="faSearch" class='search-icon search'></fa-icon>
-      <input type="text"
-      (input)="onSearchChange($event.target.value)"
-      placeholder="Search for a country..."
-      class="search-input search" />
+      <input type="text" (input)="onSearchChange($event.target.value)" placeholder="Search for a country..."
+        class="search-input search" />
     </div>
   </div>
   <div class="filter-dropdown shadow">
