--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="shadow">
-    <div class='header-title'>Where in the World?</div>
-    <div class="header-mode">
-        <fa-icon [icon]="faMoon" class='icon'></fa-icon>
-        <span class='header-mode-text'>Dark Mode</span>
-    </div>
+  <div class='header-title'>Where in the World?</div>
+  <div class="header-mode" (click)="changeMode()">
+    <fa-icon [icon]="faIcon" class='icon'></fa-icon>
+    <span class='header-mode-text'>{{mode}}</span>
+  </div>
 </header>
