--- a/src/app/country-cards/country-cards.component.scss
+++ b/src/app/country-cards/country-cards.component.scss
@@ -1,16 +1,20 @@
 .country-container {
   width: 95%;
+  min-height: 100%;
   margin: 0px auto;
+
+  @media (max-width: 1024px) {
+    width: 100%;
+  }
 }
 
 .countryList {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
 
-  @media (max-width:768px) {
-    justify-content: center;
-    margin: auto;
+  @media (max-width: 1024px) {
+    justify-content: space-around;
   }
 }
 
@@ -21,4 +25,9 @@
   border-radius: 5px;
   border: 1px solid #ccc;
   box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
+
+  @media (max-width: 1024px) {
+    min-width: 200px;
+    margin: 5px 20px 10px;
+  }
 }
